--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -20,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-localization": "^1.0.17",
     "react-multi-carousel": "^2.8.4",
+    "react-redux": "^8.1.3",
     "react-query": "^3.39.2",
     "react-query-auth": "^1.1.0",
     "react-router-dom": "^6.1.1",
@@ -29,6 +31,8 @@
     "react-toastify": "^9.0.3",
     "react-tooltip": "^5.21.6",
     "react-typed": "^2.0.12",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
